syntax = "proto3";
package api.mindexd.pb;
option go_package = "github.com/textileio/textile/v2/api/mindexd/pb";


// Domain
message MinerIndexInfo  {
	string miner_addr = 1;
	FilecoinInfo filecoin = 3;
	TextileInfo textile = 4;
	int64 updated_at = 5;
}

message FilecoinInfo {
	double relative_power = 1;
	string ask_price = 2;
	string ask_verified_price = 3;
	int64 min_piece_size = 4;
	int64 max_piece_size = 5;
	int64 sector_size = 6;
	int64 updated_at = 7;
}

message TextileInfo {
	map<string, TextileRegionInfo> regions = 1;
	int64 updated_at = 2;
}

message TextileRegionInfo {
	TextileDealsInfo deals = 1;
	TextileRetrievalsInfo retrievals = 2;
}

message TextileDealsInfo {
	int64 total = 1;
	int64 last = 2;

	int64 failures = 3;
	int64 last_failure = 4;

	repeated TransferMiBPerSec tail_transfers = 5;
	repeated SealedDurationMins tail_sealed = 6;
}

message TextileRetrievalsInfo {
	int64 total = 1;
	int64 last = 2;
	int64 failures = 3;
	int64 last_failure = 4;
	repeated TransferMiBPerSec tail_transfers = 5;
}

message TransferMiBPerSec {
	int64 transfered_at = 1;
	double mib_per_sec = 2;
}

message SealedDurationMins {
	int64 sealed_at = 1;
	int64 duration_seconds = 2;
}

message GetMinersResponse {
	string miner_address = 1;
}

// rpc QueryIndexDashboard
message QueryIndexRequest {
	QueryIndexRequestFilters filters = 1;
	QueryIndexRequestSort sort = 2;
	int32 limit = 3;
	string more_token = 4;
}

message QueryIndexRequestFilters {
	string miner_country = 1;
        string textile_region = 2;
}

message QueryIndexRequestSort {
	bool ascending = 1;
	QueryIndexRequestSortField field = 2;
}

enum QueryIndexRequestSortField {
        QUERY_INDEX_REQUEST_SORT_FIELD_TEXTILE_TOTAL_SUCCESSFUL = 0;
        QUERY_INDEX_REQUEST_SORT_FIELD_TEXTILE_LAST_SUCCESSFUL = 1;
        QUERY_INDEX_REQUEST_SORT_FIELD_ASK_PRICE = 2;
        QUERY_INDEX_REQUEST_SORT_FIELD_VERIFIED_ASK_PRICE = 3;
        QUERY_INDEX_REQUEST_SORT_FIELD_ACTIVE_SECTORS = 4;
}

message QueryIndexResponse {
	repeated MinerIndexInfo miners = 1;
}

// rpc GetMinerInfo
message GetMinerInfoRequest {
	string miner_address = 1;
}

message GetMinerInfoResponse {
	MinerIndexInfo info = 1;
}

// rpc CalculateDealPrice
message CalculateDealPriceRequest {
	string miner_address = 1;
	int64 data_size_bytes = 2;
	int64 duration_days = 3;
}

message CalculateDealPriceResponse {
	string total_cost = 1;
	string verified_total_cost = 2;
	int64 padded_size = 3;
	int64 duration_epochs = 4;
}

service APIService {
	rpc QueryIndexDashboard(QueryIndexDashboardRequest) returns (GetIndexDashboardResponse) {}
	rpc GetMinerInfo(GetMinerInfoRequest) returns (GetMinerInfoResponse) {}
	rpc CalculateDealPrice(CalculateDealPriceRequest) returns (CalculateDealPriceResponse) {}
}
